tests/ui/uninhabited/privately-uninhabited-mir-call.stderr
error[E0381]: used binding `y` isn't initialized
  --> $DIR/privately-uninhabited-mir-call.rs:30:5
   |
LL |     let y: &mut u32;
   |         - binding declared here but left uninitialized
...
LL |     *y = 2;
   |     ^^^^^^ `y` used here but it isn't initialized
   |
help: consider assigning a value
   |
LL |     let y: &mut u32 = &mut 42;
   |                     +++++++++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0381`.
